--- a/hasura/metadata/databases/ponder/tables/public_Deposit.yaml
+++ b/hasura/metadata/databases/ponder/tables/public_Deposit.yaml
@@ -7,3 +7,31 @@ configuration:
   custom_name: deposits
   custom_root_fields:
     select_by_pk: deposit
+object_relationships:
+  - name: receiver
+    using:
+      manual_configuration:
+        column_mapping:
+          receiverId: id
+        insertion_order: null
+        remote_table:
+          name: Account
+          schema: public
+  - name: sender
+    using:
+      manual_configuration:
+        column_mapping:
+          senderId: id
+        insertion_order: null
+        remote_table:
+          name: Account
+          schema: public
+  - name: vault
+    using:
+      manual_configuration:
+        column_mapping:
+          vaultId: id
+        insertion_order: null
+        remote_table:
+          name: Vault
+          schema: public
