--- a/hasura/metadata/databases/ponder/tables/public_FeeTransfer.yaml
+++ b/hasura/metadata/databases/ponder/tables/public_FeeTransfer.yaml
@@ -7,3 +7,22 @@ configuration:
   custom_name: feeTranfers
   custom_root_fields:
     select_by_pk: feeTransfers
+object_relationships:
+  - name: receiver
+    using:
+      manual_configuration:
+        column_mapping:
+          receiverId: id
+        insertion_order: null
+        remote_table:
+          name: Account
+          schema: public
+  - name: sender
+    using:
+      manual_configuration:
+        column_mapping:
+          senderId: id
+        insertion_order: null
+        remote_table:
+          name: Account
+          schema: public
