--- a/hasura/metadata/databases/ponder/tables/public_Position.yaml
+++ b/hasura/metadata/databases/ponder/tables/public_Position.yaml
@@ -7,3 +7,22 @@ configuration:
   custom_name: positions
   custom_root_fields:
     select_by_pk: position
+object_relationships:
+  - name: account
+    using:
+      manual_configuration:
+        column_mapping:
+          accountId: id
+        insertion_order: null
+        remote_table:
+          name: Account
+          schema: public
+  - name: vault
+    using:
+      manual_configuration:
+        column_mapping:
+          vaultId: id
+        insertion_order: null
+        remote_table:
+          name: Vault
+          schema: public
