--- a/hasura/metadata/databases/ponder/tables/public_Thing.yaml
+++ b/hasura/metadata/databases/ponder/tables/public_Thing.yaml
@@ -7,3 +7,13 @@ configuration:
   custom_name: things
   custom_root_fields:
     select_by_pk: thing
+object_relationships:
+  - name: atom
+    using:
+      manual_configuration:
+        column_mapping:
+          atomId: id
+        insertion_order: null
+        remote_table:
+          name: Atom
+          schema: public
