--- a/hasura/metadata/databases/ponder/tables/public_Vault.yaml
+++ b/hasura/metadata/databases/ponder/tables/public_Vault.yaml
@@ -7,3 +7,50 @@ configuration:
   custom_name: vaults
   custom_root_fields:
     select_by_pk: vault
+object_relationships:
+  - name: atom
+    using:
+      manual_configuration:
+        column_mapping:
+          atomId: id
+        insertion_order: null
+        remote_table:
+          name: Atom
+          schema: public
+  - name: redemptions
+    using:
+      manual_configuration:
+        column_mapping:
+          id: vaultId
+        insertion_order: null
+        remote_table:
+          name: Redemption
+          schema: public
+  - name: triple
+    using:
+      manual_configuration:
+        column_mapping:
+          tripleId: id
+        insertion_order: null
+        remote_table:
+          name: Triple
+          schema: public
+array_relationships:
+  - name: deposits
+    using:
+      manual_configuration:
+        column_mapping:
+          id: vaultId
+        insertion_order: null
+        remote_table:
+          name: Deposit
+          schema: public
+  - name: positions
+    using:
+      manual_configuration:
+        column_mapping:
+          id: vaultId
+        insertion_order: null
+        remote_table:
+          name: Position
+          schema: public
