--- a/hasura/metadata/databases/ponder/tables/public_Account.yaml
+++ b/hasura/metadata/databases/ponder/tables/public_Account.yaml
@@ -81,3 +81,14 @@ array_relationships:
         remote_table:
           name: Signal
           schema: public
+remote_relationships:
+  - definition:
+      to_remote_schema:
+        lhs_fields:
+          - id
+        remote_field:
+          followers:
+            arguments:
+              account: $id
+        remote_schema: apollo
+    name: followers
