--- a/hasura/metadata/databases/ponder/tables/public_Deposit.yaml
+++ b/hasura/metadata/databases/ponder/tables/public_Deposit.yaml
@@ -35,3 +35,24 @@ object_relationships:
         remote_table:
           name: Vault
           schema: public
+select_permissions:
+  - role: anonymous
+    permission:
+      columns:
+        - receiverId
+        - senderId
+        - transactionHash
+        - isAtomWallet
+        - isTriple
+        - blockNumber
+        - blockTimestamp
+        - entryFee
+        - receiverTotalSharesInVault
+        - senderAssetsAfterTotalFees
+        - sharesForReceiver
+        - vaultId
+        - id
+      filter: {}
+      limit: 100
+      allow_aggregations: true
+    comment: ""
