--- a/hasura/metadata/databases/ponder/tables/public_Redemption.yaml
+++ b/hasura/metadata/databases/ponder/tables/public_Redemption.yaml
@@ -35,3 +35,22 @@ object_relationships:
         remote_table:
           name: Vault
           schema: public
+select_permissions:
+  - role: anonymous
+    permission:
+      columns:
+        - receiverId
+        - senderId
+        - transactionHash
+        - assetsForReceiver
+        - blockNumber
+        - blockTimestamp
+        - exitFee
+        - senderTotalSharesInVault
+        - sharesRedeemedBySender
+        - vaultId
+        - id
+      filter: {}
+      limit: 100
+      allow_aggregations: true
+    comment: ""
