feat: sring account id

--- a/package.json
+++ b/package.json
@@ -9,5 +9,6 @@
     "dev:stop:reset": "docker-compose down -v",
     "dev:stop": "docker-compose down",
     "dev": "pnpm dev:stop:reset && pnpm dev:start"
-  }
+  },
+  "packageManager": "pnpm@9.1.3+sha256.7f63001edc077f1cff96cacba901f350796287a2800dfa83fe898f94183e4f5f"
 }
