feat: render blueprint

--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "hasura-local:apply": "cd hasura && hasura metadata apply --admin-secret myadminsecretkey && cd ..",
-    "hasura-local:migrate": "cd hasura && hasura migrate apply --database-name ponder --admin-secret myadminsecretkey && cd ..",
-    "hasura-local:export": "cd hasura && hasura metadata export --admin-secret myadminsecretkey && cd ..",
+    "hasura-local:apply": "hasura --project hasura metadata apply --admin-secret myadminsecretkey",
+    "hasura-local:migrate": "hasura --project hasura migrate apply --database-name ponder --admin-secret myadminsecretkey",
+    "hasura-local:export": "hasura --project hasura metadata export --admin-secret myadminsecretkey",
     "dev:start": "docker-compose up -d ",
     "dev:stop:reset": "docker-compose down -v",
     "dev:stop": "docker-compose down",
