--- a/render.yaml
+++ b/render.yaml
@@ -2,13 +2,12 @@ databases:
 - name: hasura
   databaseName: hasura_b7fp
   user: hasura_b7fp_user
-  plan: basic-256mb
+  plan: starter
   region: oregon
   ipAllowList:
   - source: 0.0.0.0/0
     description: everywhere
   postgresMajorVersion: "16"
-  diskSizeGB: 15
 services:
 - type: web
   name: ponder-indexer
