--- a/render.yaml
+++ b/render.yaml
@@ -38,16 +38,20 @@ services:
   name: hasura
   runtime: image
   image:
-    url: docker.io/hasura/graphql-engine:v2.0.2
+    url: docker.io/hasura/graphql-engine:v2.44.0
   dockerCommand: graphql-engine serve --server-port $PORT
   plan: starter
   envVars:
+  - key: HASURA_GRAPHQL_STRINGIFY_NUMERIC_TYPES
+    value: true
   - key: HASURA_GRAPHQL_UNAUTHORIZED_ROLE
     value: anonymous
   - key: HASURA_GRAPHQL_ADMIN_SECRET
     sync: false
   - key: HASURA_GRAPHQL_ENABLE_CONSOLE
     value: true
+  - key: PINATA_AUTH
+    sync: false
   - key: HASURA_GRAPHQL_METADATA_DATABASE_URL
     fromDatabase:
       name: hasura
