--- a/hasura/metadata/actions.yaml
+++ b/hasura/metadata/actions.yaml
@@ -1,6 +1,48 @@
-actions: []
+actions:
+  - name: uploadThing
+    definition:
+      kind: synchronous
+      handler: https://api.pinata.cloud/pinning/pinJSONToIPFS
+      headers:
+        - name: Content-Type
+          value: application/json
+        - name: Authorization
+          value_from_env: PINATA_AUTH
+      request_transform:
+        body:
+          action: transform
+          template: |-
+            {
+              "pinataOptions": {
+                "cidVersion": 1
+              },
+              "pinataContent": {
+                "@context": "https://schema.org",
+                "@type": "Thing",
+                "name": "{{$body.input.arg1.name}}",
+                "description": "{{$body.input.arg1.description}}",
+                "image": "{{$body.input.arg1.image}}",
+                "url": "{{$body.input.arg1.url}}"
+              }
+            }
+        template_engine: Kriti
+        version: 2
+      response_transform:
+        body:
+          action: transform
+          template: |-
+            {
+              "cid": {{$body.IpfsHash}}
+            }
+        template_engine: Kriti
+        version: 2
+    permissions:
+      - role: anonymous
+    comment: Uploads Thing to IPFS
 custom_types:
   enums: []
-  input_objects: []
-  objects: []
+  input_objects:
+    - name: ThingInput
+  objects:
+    - name: ThingOutput
   scalars: []
